--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="content d-flex">
                 <div class="logo">
-                    <a href="finalproject.html.html">JayaStore</a>
+                    <a href="index.html">JayaStore</a>
                 </div>
 
                 <!--NAV TOGGLE BUTTON-->
